# tiralabra

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  2048-ratkoja.spec  README.md  pyproject.toml  tasks.py
data/: ajat.txt
dokumentaatio/: Testaus.md  kayttoohje.md  maarittelydokumentti.md  toteutusdokumentti.md
dokumentaatio/html/src/: config.html  index.html  index.m.html  index_ratkoja.html
dokumentaatio/html/src/peli/: index.html  liiku.html  netti_peli.html  peli.html
dokumentaatio/html/src/ratkoja/: index.html  ratkoja.html  taulukko.html
dokumentaatio/html/src/tests/: index.html
dokumentaatio/html/src/tests/liikkuminen/: index.html  liiku_test.html
dokumentaatio/html/src/tests/peli/: index.html  peli_test.html
dokumentaatio/html/src/tests/ratkoja/: index.html  ratkoja_test.html
dokumentaatio/viikkoraportit/: viikkoraportt6.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: config.py  index.py  index_ratkoja.py
src/peli/: 2048_peli.py  liiku.py  netti_peli.py  peli.py
src/ratkoja/: ratkoja.py  taulukko.py
src/tests/: peli_test.py
src/tests/liikkuminen/: liiku_test.py
src/tests/peli/: peli_test.py
src/tests/ratkoja/: ratkoja_test.py
