[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Tuomas Marenk <tuomas.marenk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
